syntax = "proto3";

package user;

message User {
  string id = 1;
  string email = 2;
  string name = 3;
  int32 YOB = 4;
}

message UpdateUserRequest {
  string id = 1;
  optional string email = 2;
  optional string name = 3;
  optional string password = 4;
  optional int32 YOB = 5;
}

message GetAllUserRequest {
  int32 page = 1;
  int32 limit = 2;
}

message GetUserRequest {
  string id = 1;
}

message UpdateUserResponse {
  bool success = 1;
  string message = 2;
  User data = 3;
  repeated string errors = 4;
}

message UserDetailResponse {
  bool success = 1;
  string message = 2;
  User data = 3;
}

message UsersResponse {
  bool success = 1;
  string message = 2;
  repeated User data = 3; 
}

message GetAllUserResponse {
  repeated User data = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
  int32 totalPages = 5;
}

service UserService {
  rpc GetUser(GetUserRequest) returns (UserDetailResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc GetAllUsers(GetAllUserRequest) returns (GetAllUserResponse);
}